# proxima_backend

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  run_script.sh
configuration/infra/: python.txt
configuration/prompts/: action.txt  callback.txt  description.txt  tag.txt  title.txt
configuration/prompts/tool_prompts/: agent.txt  calculator.txt  filesystem.txt  jobs.txt  local_memory.txt  memory.txt  python.txt  rng.txt  time.txt  tool_use.txt  web.txt
program_configuration_loader/: Cargo.toml
proxima_backend_server/: Cargo.toml  Dockerfile  build_script.sh  example_config.yml
proxima_backend_server/src/: lib.rs  main.rs
proxima_backend_server/src/openai_full_impl/: mod.rs
proxima_backend_server/src/openai_impl/: mod.rs
proxima_backend_server/src/openai_simple_impl/: mod.rs
proxima_backend_server/src/web_handlers/: ai_endpoint_web_handlers.rs  auth_web_handlers.rs  database_web_handlers.rs  home_endpoint_web_handlers.rs  media_handlers.rs  mod.rs
python_tool_executor/: Cargo.toml  Dockerfile  build_script.sh
python_tool_executor/src/: main.rs
python_tool_server/: Cargo.toml  Dockerfile  build_script.sh
python_tool_server/src/: main.rs
src/: initialization.rs  lib.rs  main.rs  proxima_handler.rs  web_payloads.rs
src/ai_interaction/: ai_response.rs  create_prompt.rs  endpoint_api.rs  mod.rs  settings.rs  tools.rs
src/ai_interaction/backend_api/: mod.rs
src/ai_interaction/backend_api/openai_impl/: mod.rs
src/database/: access_modes.rs  chats.rs  configuration.rs  context.rs  description.rs  devices.rs  files.rs  filesystem.rs  folders.rs  jobs.rs  loading_saving.rs  media.rs  memories.rs  mod.rs  notifications.rs  tags.rs  user.rs
src/web_handlers/: auth_web_handlers.rs  mod.rs
