[package]
name = "proxima_backend"
version = "0.1.1"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.3" # For generating unique IDs
lazy_static = "1.4"
image = "0.25.6"
html_parser = "0.7.0"
openai = "1.1.0"
chrono = {version = "0.4.38", features = ["serde"]}
rand = "0.9.1"

[lib]
path = "src/lib.rs"