[package]
name = "proxima_backend"
version = "0.2.1"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.3" # For generating unique IDs
lazy_static = "1.4"
image = "0.25.6"
html_parser = "0.7.0"
chrono = {version = "0.4.38", features = ["serde"]}
rand = "0.9.1"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
whoami = "1.6.0"

[lib]
path = "src/lib.rs"

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']